--- a/app/src/main/res/layout/seekbar.xml
+++ b/app/src/main/res/layout/seekbar.xml
@@ -341,6 +341,54 @@
 
             </RelativeLayout>
 
+            <!-- seekbar option 9 -->
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:clipChildren="false">
+
+                <com.crystal.crystalrangeseekbar.widgets.CrystalSeekbar
+                    android:id="@+id/rangeSeekbar9"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:min_value="100"
+                    app:max_value="200"
+                    app:steps="5"
+                    app:bar_color="#F7BB88"
+                    app:bar_highlight_color="#E07416"
+                    app:left_thumb_image="@drawable/thumb_vector"
+                    app:left_thumb_image_pressed="@drawable/thumb_vector_pressed"
+                    app:data_type="_integer"
+                    app:thumb_diameter="40dp"
+                    app:left_thumb_color="#ff0000"
+                    app:left_thumb_color_pressed="#990000"/>
+
+                <TextView
+                    android:id="@+id/textMax9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="200"
+                    android:layout_below="@id/rangeSeekbar9"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:textSize="16dp"
+                    android:textColor="#000" />
+
+                <TextView
+                    android:id="@+id/textMin9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="100"
+                    android:layout_below="@id/rangeSeekbar9"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="10dp"
+                    android:textSize="16dp"
+                    android:textColor="#000"
+                    android:layout_alignParentRight="true"/>
+
+            </RelativeLayout>
+
         </LinearLayout>
 
     </ScrollView>
